fix: map fullscreen button  z-index

--- a/src/components/map/scss/map.scss
+++ b/src/components/map/scss/map.scss
@@ -45,7 +45,7 @@
   top: 10px;
   right: 10px;
   color: black;
-  z-index: 10;
+  z-index: 1000;
   border-radius: 4px;
   background: white;
   display: flex;
